--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -44,7 +44,6 @@ body{
 /* ---------------------Header----------------------------- */
 
 header{
-    max-width: 1600px;
     min-width: 320px;
     width: 100vw;
     height: 700px;
@@ -136,7 +135,6 @@ header nav ul li:hover{
 /* ----------------main-------------------- */
 
 main{
-    max-width: 1600px;
     min-width: 320px;
     width: 100%;
     background-color: #fff;
@@ -482,6 +480,7 @@ footer a{
 /* ----------------header----------------------------- */
 
     header{
+        max-width: 1100px;
         width: 100%;
         height: 100vh;
         background-size: cover;
@@ -539,7 +538,7 @@ footer a{
 /* -----------main------------------- */
 
     main{
-        max-width: 1024px;
+        max-width: 1100px;
         padding-bottom: 40px;
     }
 
@@ -680,6 +679,7 @@ footer a{
 /* -----------footer------------------- */
 
     footer{
+        max-width: 1100px;
         padding: 30px 0;
     }
     .footer_wrapper{
@@ -769,6 +769,7 @@ footer a{
 /* -----------Header------------------- */
 
     header{
+        max-width: 767px;
         width: 100%;
         height: 100vh;
         background-size: cover;
@@ -829,7 +830,9 @@ footer a{
     }
 
 /* -----------popular------------------- */
-
+    main{
+        max-width: 767px;
+    }
     .popular h2{
          margin: 10px auto;
          font-size: 24px;
@@ -983,6 +986,7 @@ footer a{
 /* -----------footer------------------- */
 
     footer{
+        max-width: 767px;
         padding: 10px 0;
     }
     .footer_wrapper{
