--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -897,7 +897,7 @@ footer a{
         width: 96%;
     }
     .special-gallery-card{
-        width: 100%
+        width: 100%;
         height: 100%;
     }
     .special-gallery-img{
